# backend-challenge

./: challenge.txt  postgres-schema.sql
integration-tests/: test_database_data_1.py  test_database_data_2.py  test_database_data_3.py  test_database_data_4.py  test_database_data_5.py  test_endpoint_1.py  test_endpoint_2.py  test_endpoint_3.py  test_endpoint_4.py  test_endpoint_5.py  test_endpoint_6.py  test_endpoint_7.py  test_endpoint_8.py
java-bootstrap/: .gitignore  pom.xml
java-bootstrap/src/main/java/uk/co/hackajob/interview/: DataInitialiser.java  GlobalCurrenciesApplication.java
java-bootstrap/src/main/java/uk/co/hackajob/interview/controller/: CurrencyController.java
java-bootstrap/src/main/resources/: application.properties
python/: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
python/hackajob/: manage.py
python/hackajob/global_currencies/: apps.py  data_initialiser.py  models.py  urls.py  views.py
python/hackajob/global_currencies/client/: countries_client.py  models.py
python/hackajob/hackajob/: asgi.py  settings.py  urls.py  wsgi.py
src/main/java/uk/co/hackajob/interview/: DataInitialiser.java  GlobalCurrenciesApplication.java
src/main/java/uk/co/hackajob/interview/client/: CountriesClient.java
src/main/java/uk/co/hackajob/interview/client/models/: CountryDTO.java  (+2 more)
src/main/java/uk/co/hackajob/interview/controller/: CurrencyController.java
src/test/java/uk/co/hackajob/interview/: GlobalCurrenciesApplicationTest.java
src/test/java/uk/co/hackajob/interview/controller/: CurrencyControllerTest.java
(+6 files in other folders)
